test_suite/tests/ui/pass/option_option_type.rs
use clapi::macros::*;

#[command]
#[option(number)]
fn test(number: Option<u32>){}

fn main(){}